--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,25 @@
 name: Yggdrasil
 version: ${project.version}
 main: tk.fridtjof.yggdrasil.Yggdrasil
-api-version: 1.15.2
+api-version: 1.16
 authors: [Fridtjof_DE]
 description: An essential plugin
 website: https://www.fridtjof.tk/
+
+commands:
+  monitor:
+    description: Monitors server stats.
+  head:
+    description: Gets a player's head.
+  msg:
+    description: Sends a message to player.
+
+permissions:
+  yggdrasil.cmd.monitor:
+    description: Grants permission to use the /monitor command!
+  yggdrasil.sign.color_codes:
+    description: Grants permission to use color codes on signs!
+  yggdrasil.sign.formatting_codes:
+    description: Grants permission to use formatting codes on signs!
+  yggdrasil.cmd.head:
+    description: Gets a player's head.
