--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,9 @@
         <dependency>
             <groupId>tk.fridtjof</groupId>
             <artifactId>puddingapi</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.0-Snapshot</version>
             <scope>system</scope>
-            <systemPath>C:/Users/fried/Documents/GitHub/PuddingAPI/target/PuddingAPI-2.0.0.jar</systemPath>
+            <systemPath>C:/Users/fried/Documents/GitHub/PuddingAPI/target/PuddingAPI-2.0.0-Snapshot.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
