--- a/pom.xml
+++ b/pom.xml
@@ -56,20 +56,20 @@
 
     <repositories>
         <repository>
-            <id>fridtjofs-repo</id>
-            <url>https://www.fridtjof.tk/repo/</url>
-        </repository>
-        <repository>
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>spigotmc-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>1.16.1</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.16.4-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -77,7 +77,7 @@
             <artifactId>puddingapi</artifactId>
             <version>2.0.0-Snapshot</version>
             <scope>system</scope>
-            <systemPath>C:/Users/fried/Documents/GitHub/PuddingAPI/target/PuddingAPI-2.0.0-Snapshot.jar</systemPath>
+            <systemPath>C:/Users/Fridtjof/Documents/GitHub/PuddingAPI/builds/PuddingAPI-2.0.0-SNAPSHOT.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
