--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>tk.fridtjof</groupId>
+    <groupId>me.fridtjof</groupId>
     <artifactId>Yggdrasil</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -13,10 +13,10 @@
 
     <description>An essential plugin</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>https://www.fridtjof.tk/</url>
+    <url>https://www.fridtjof.me/</url>
 
     <build>
         <plugins>
