--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Yggdrasil
 version: ${project.version}
-main: tk.fridtjof.yggdrasil.Yggdrasil
+main: me.fridtjof.yggdrasil.Yggdrasil
 api-version: 1.17
 authors: [Fridtjof_DE]
 description: An essential plugin
