--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,16 @@
 
     <description>An essential plugin</description>
     <properties>
-        <java.version>16</java.version>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <maven.build.timestamp.format>yy-MMdd-HHmm</maven.build.timestamp.format>
+
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <url>https://www.fridtjof.me/</url>
 
     <build>
+        <finalName>${project.artifactId}-${project.version}-${timestamp}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -73,7 +77,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.18.2-R0.1-SNAPSHOT</version>
+            <version>1.19-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -81,7 +85,7 @@
             <artifactId>puddingapi</artifactId>
             <version>2.0.0-Snapshot</version>
             <scope>system</scope>
-            <systemPath>C:/Users/Fridtjof/Documents/GitHub/PuddingAPI/builds/PuddingAPI-2.0.0-SNAPSHOT.jar</systemPath>
+            <systemPath>/home/fridtjof/Dokumente/GitHub/PuddingAPI/builds/PuddingAPI-2.0.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>me.clip</groupId>
